# analytics-air-quality

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  style copy.css  style.css
.streamlit/: config.toml
data/monitor_ar/: estacoes.csv
frontend/: app.py  palletes.py
frontend/pages/correlacao/: __init__.py  filters.py  graphs.py
frontend/pages/datasus/: __init__.py  filters.py  graphs copy.py  graphs.py
frontend/pages/monitorar/: __init__.py  filters.py  graphs.py
frontend/utils/: __init__.py  execute_query.py
frontend/utils/correlacao/: graph_queries.py
frontend/utils/datasus/: graph_queries.py
frontend/utils/monitorar/: __init__.py  graph_queries.py
notebooks/: 00_exemplo.ipynb  Doc_EDA.ipynb  EDA.ipynb  casos_df.ipynb  db_tests.ipynb  eda.ipynb  evolucao_mensal.ipynb  graficos_monitora_vs_datasus.ipynb  graficos_monitorar.ipynb  graficos_sus.ipynb  mapa_casos.ipynb  mapa_estacoes.ipynb  metricas_com_iqar.ipynb  monitorar_df.ipynb  qualidade_iqar.ipynb
notebooks/.ipynb_checkpoints/: graficos_monitorar-checkpoint.ipynb  graficos_sus-checkpoint.ipynb
postgres_dw/: dbt_project.yml
postgres_dw/models/core/: schema.yml
postgres_dw/seeds/: pollutant_units.csv  total_populations.csv
src/: main.py
src/extract/: from_csv.py
src/load/: to_postgres.py
src/transform/: clean_monitor_ar.py  clean_opendatasus.py  transformation.py
streamlit/: app.py
streamlit/utils/: components.py  execute_query.py
tests/: test_extract_from_csv.py  test_light_transform.py  test_load_to_postgres.py
(+41 files in other folders)
